# orbit

./: .gitignore  AGENTS.md  BENCHMARK.md  DEFECTS.md  MANIFEST.in  Modelfile.gemma4-e2b-c4k  Modelfile.gemma4-e2b-c8k  Modelfile.gemma4-e2b-fast-t6-c8k  PERFORMANCE.md  PROMPTS.md  QUANTIZATION.md  README.md  install.sh  pyproject.toml  sample.txt  tune-e2b.sh
docs/: BOUNDED_TOOL_PLANNING.md  FIRST_TURN_TOOLS_ON_PREFILL_ANALYSIS.md  KV_BACKEND_ENVELOPE_DIAGNOSTICS.md  KV_BACKEND_NATIVE_CACHE_DIAGNOSTICS.md  KV_CACHE_PHASE_0_BASELINE.md  KV_CACHE_PHASE_2_ANALYSIS.md  KV_CACHE_REUSE_PLAN.md  KV_INDEX.md  KV_POST_MERGE_CLEANUP_REVIEW.md  KV_PREFIX_ANCHOR_EQUIVALENCE_PROBE.md  KV_PREFIX_ANCHOR_FEASIBILITY.md  KV_PREFIX_ANCHOR_IMPLEMENTATION_PLAN.md  KV_PREFIX_ANCHOR_LIFECYCLE_PHASE_1.md  KV_PREFIX_ANCHOR_RUNTIME_NO_GO.md  KV_PREFIX_CACHE_FEASIBILITY.md  KV_PREFIX_REUSE_POST_ROUTE_BASELINE.md  KV_PROMPT_LAYOUT_DIAGNOSTICS.md  KV_PROMPT_SHAPE_EXPERIMENT.md  KV_ROUTE_PREFIX_ANCHOR_RUNTIME_EXPERIMENT.md  KV_ROUTE_PREFIX_ANCHOR_RUNTIME_NO_GO.md  KV_ROUTE_PREFIX_TOKEN_BOUNDARY.md  LLAMA_DEEP_CLIENT_EXPERIMENT.md  MTP_STATE_MACHINE_ANALYSIS.md  MTP_UNRESOLVED_ISSUES.md  MTP_VALIDATION_BENCHMARK_PLAN.md  NATIVE_BACKEND_CAPABILITIES.md  NATIVE_MTMD_ABI.md  NATIVE_PACKAGING_ROADMAP.md  NATIVE_ROUTE_PREFIX_PREFILL_HOOK.md  NATIVE_ROUTE_PREFIX_PREFILL_ONLY_FEASIBILITY.md  NATIVE_ROUTE_PREFIX_PREWARM_DESIGN.md  NATIVE_ROUTE_PREFIX_STARTUP_PREWARM.md  PERFORMANCE.md  POST_TOOL_MODEL_CALL_AUDIT.md  PROMPTS.md  PROMPTS_RELEASE_HARDENING_REVIEW.md  RC2_READINESS_REVIEW.md  (+13 more)
tests/: test_cli.py  (+86 more)
(+249 files in other folders)
