[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit"
version = "0.0.1"
description = "Minimal local Orbit runtime for llama-server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
orbit = "orbit.terminal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
